implemented backend changes to frontend